Update Java version from 17 to 11